--- a/style.css
+++ b/style.css
@@ -1,165 +1,155 @@
-body{
+body {
     margin: 0;
     padding: 0;
-
-}
-
-.menu{
+  }
+  
+  .menu {
     display: flex;
     justify-content: space-around;
     margin-top: 50px;
-}
-
-.logo a{
+  }
+  
+  .logo a {
     text-decoration: none;
-    font-family:cursive;
-    font-weight:bold;
+    font-family: cursive;
+    font-weight: bold;
     font-size: 25px;
     color: chocolate;
     text-shadow: 3px 3px 2px #997974;
-
-}
-
-.menu-right a{
+  }
+  
+  .menu-right a {
     text-decoration: none;
     color: #997974;
     margin-left: 95px;
-    
-}
-
-.menu-right a:hover{
+  }
+  
+  .menu-right a:hover {
     text-decoration: underline;
     color: chocolate;
-}
-
-.header{
+  }
+  
+  .header {
     width: 100%;
     height: 500px;
     background-image: url("./images/boathouse.jpg");
     background-size: cover;
     margin-top: 10px;
-    border-top: 4px solid #eeeeee ;
-    border-bottom: 4px solid #eeeeee ;
-}
-
-.place-to-visit{
+    border-top: 4px solid #eeeeee;
+    border-bottom: 4px solid #eeeeee;
+  }
+  
+  .place-to-visit {
     display: flex;
     justify-content: space-between;
     margin: 0px 28px;
-}
-
-.main-content1 h4{
+  }
+  
+  .main-content1 h4 {
     font-family: "Satisfy", cursive;
     font-size: 30px;
     font-weight: 500;
-    color: rgb(181,184,188);
+    color: rgb(181, 184, 188);
     text-decoration: underline;
     margin: 10px 28px;
-
-}
-
-.main-content1{
+  }
+  
+  .main-content1 {
     padding: 0px 80px;
-}
-
-.place-to-visit img{
+  }
+  
+  .place-to-visit img {
     width: 180px;
-    transition: transform .5s ease;
-}
-
-.place-to-visit img:hover{
+    transition: transform 0.5s ease;
+  }
+  
+  .place-to-visit img:hover {
     transform: scale(0.8);
-    
-}
-
-.place-to-visit div{
-    width:200px;
-}
-
-.place-to-visit div:hover{
-    border: 1px solid rgb(181,184,188);
+  }
+  
+  .place-to-visit div {
+    width: 200px;
+  }
+  
+  .place-to-visit div:hover {
+    border: 1px solid rgb(181, 184, 188);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.place-to-visit h5{
-    color: rgb(181,184,188);
-    font-family: Georgia, 'Times New Roman', Times, serif;    
+  }
+  
+  .place-to-visit h5 {
+    color: rgb(181, 184, 188);
+    font-family: Georgia, "Times New Roman", Times, serif;
     font-weight: 500;
     font-size: 15px;
     margin-top: 4px;
-}
-
-.place-to-visit p{
-    color: rgb(181,184,188);
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  
+  .place-to-visit p {
+    color: rgb(181, 184, 188);
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
     font-weight: 100;
     margin-top: 4px;
-    
-}
-
-.welcome{
+  }
+  
+  .welcome {
     display: flex;
     justify-content: space-around;
-}
-
-.welcome p{
-    color: rgb(181,184,188);
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  
+  .welcome p {
+    color: rgb(181, 184, 188);
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
     font-weight: 100;
     margin-top: 4px;
     margin-left: 20px;
-    
-}
-
-.welcome img{
+  }
+  
+  .welcome img {
     width: 400px;
     margin-right: 200px;
-}
-
-.main-content2 h4{
+  }
+  
+  .main-content2 h4 {
     font-family: "Satisfy", cursive;
     font-size: 30px;
     font-weight: 500;
-    color: rgb(181,184,188);
+    color: rgb(181, 184, 188);
     text-decoration: underline;
     margin: 10px 98px;
-    
-
-}
-
-.main-content2{
+  }
+  
+  .main-content2 {
     padding: 10px;
-    border-bottom: 4px solid #eeeeee ;
-}
-.avatar {
+    border-bottom: 4px solid #eeeeee;
+  }
+  .avatar {
     width: 150px;
     border: 4px solid chocolate;
     border-radius: 50%;
-   
-}
-
-.card {
+  }
+  
+  .card {
     width: 400px;
     margin: 20px auto;
     padding: 20px;
     display: flex;
     justify-content: space-around;
     text-align: center;
-    background: rgb(181,184,188);
-    color:#997974;
+    background: rgb(181, 184, 188);
+    color: #997974;
     font-weight: bold;
     border-bottom: 4px solid chocolate;
-
-   
-}
-
-#footer{
-width:100%;
-display: flex;
-justify-content: center;
-align-items: center;
-background-color:#997974;
-padding: 0px 20px;
-color:black;
-
-}
+  }
+  
+  #footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #997974;
+    padding: 0px 20px;
+    color: black;
+  }
+  
