--- a/style.css
+++ b/style.css
@@ -29,15 +29,40 @@ body {
     color: chocolate;
   }
   
-  .header {
+   /* .header {
     width: 100%;
     height: 500px;
-    background-image: url("./images/boathouse.jpg");
-    background-size: cover;
+     background-image: url("./images/boathouse.jpg");
+    background-size: cover; 
     margin-top: 10px;
     border-top: 4px solid #eeeeee;
     border-bottom: 4px solid #eeeeee;
-  }
+  }  */
+
+  .header {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    gap: 20px; 
+}
+
+#carouselImg {
+    max-width: 100%; 
+    height: auto; 
+}
+
+#prevBtn, #nextBtn {
+    padding: 10px 20px; 
+    cursor: pointer; 
+    background-color: chocolate; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+}
+
+#prevBtn:hover, #nextBtn:hover {
+    background-color:coral;
+}
   
   .place-to-visit {
     display: flex;
